src/argocd/bootstrap-resources/traefik/ingresses-nr.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nr
  namespace: traefik
spec:
  type: ExternalName
  externalName: "10.1.10.21"
  selector:
    app.kubernetes.io/name: nr
  ports:
  - name: http
    protocol: TCP
    port: 1880
    targetPort: 1880

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nr
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nr.ryanb.tv`)
      kind: Rule
      services:
        - name: nr
          kind: Service
          port: http
  tls: {}
