src/argocd/bootstrap-resources/traefik/ingresses.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.ryanb.tv`) && !Path(`/ping`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`traefik.ryanb.tv`) && Path(`/ping`)
      kind: Rule
      services:
        - name: ping@internal
          kind: TraefikService
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cd.ryanb.tv`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: https
    - match: Host(`cd.ryanb.tv`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-prometheus-stack-prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.ryanb.tv`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-prometheus
          kind: Service
          port: http-web
  tls: {}
